Fix: Update handler.go and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "handler/handler.go",
+      "src": "handler.go",
       "use": "@vercel/go"
     }
   ],
